--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An Extism host for Javascript",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-wasi-unstable-preview1 example.node.js hello.wasm run_test"
+    "test": "node --experimental-wasi-unstable-preview1 example.node.js hello.wasm run_test",
+    "test-config": "node --experimental-wasi-unstable-preview1 example.node.js config.wasm run_test"
   },
   "author": "",
   "type": "module",
