--- a/package.json
+++ b/package.json
@@ -1,13 +1,39 @@
 {
-  "name": "extism",
-  "version": "0.1.0",
-  "description": "An Extism host for Javascript",
-  "main": "index.js",
+  "name": "@extism/runtime-browser",
+  "version": "0.3.0",
+  "description": "Extism runtime in the browser",
   "scripts": {
-    "test": "node --experimental-wasi-unstable-preview1 example.node.js hello.wasm run_test",
-    "test-config": "node --experimental-wasi-unstable-preview1 example.node.js config.wasm run_test"
+    "build": "node build.js && tsc --emitDeclarationOnly --outDir dist",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest --config jest.config.js"
   },
-  "author": "",
-  "type": "module",
-  "license": "BSD-3-Clause"
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist/*"
+  ],
+  "module": "dist/index.esm.js",
+  "main": "dist/index.js",
+  "typings": "dist/src/index.d.ts",
+  "author": "The Extism Authors <oss@extism.org>",
+  "license": "BSD-3-Clause",
+  "devDependencies": {
+    "@types/jest": "^29.2.2",
+    "esbuild": "^0.15.13",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.23.20",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@bjorn3/browser_wasi_shim": "^0.2.7"
+  }
 }
