we don't bundle deno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "deno.lint": true,
     "deno.unstable": true,
     "deno.enablePaths": [
-        "./src/index.deno.ts",
+        "./src/mod.ts",
         "./examples/deno.ts"
     ]
 }
