--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "@types/sync-fetch": "^0.4.0",
     "esbuild": "^0.15.13",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.2.2",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@bjorn3/browser_wasi_shim": "^0.2.14",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sync-fetch": "^0.5.2"
   }
 }
