add tests for deno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "deno.unstable": true,
     "deno.enablePaths": [
         "./src/mod.ts",
-        "./examples/deno.ts"
+        "./examples/deno.ts",
+        "./tests/index.deno.test.ts"
     ]
 }
