--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@extism/runtime-browser",
+  "name": "@extism/runtime",
   "version": "0.3.0",
-  "description": "Extism runtime in the browser",
+  "description": "Extism runtime for JavaScript",
   "scripts": {
-    "build": "node build.js && tsc --emitDeclarationOnly --project ./tsconfig.node.json --declaration --outDir dist/node && tsc --emitDeclarationOnly --project ./tsconfig.browser.json --declaration --outDir dist/browser",
+    "build": "node build.js && tsc --emitDeclarationOnly --project ./tsconfig.node.json --declaration --outDir dist && tsc --emitDeclarationOnly --project ./tsconfig.browser.json --declaration --outDir dist",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "cross-env NODE_OPTIONS='--experimental-wasi-unstable-preview1' jest --coverage --config jest.config.js",
-    "test-deno": "deno test -A ./tests/index.deno.test.ts"
+    "test-deno": "deno test -A ./tests/mod.test.ts"
   },
   "private": false,
   "publishConfig": {
@@ -16,9 +16,22 @@
   "files": [
     "dist/*"
   ],
-  "module": "dist/index.esm.js",
-  "main": "dist/index.js",
+  "module": "dist/browser/index.mjs",
+  "main": "dist/node/index.js",
   "typings": "dist/src/index.d.ts",
+  "browser": "./dist/browser/index.mjs",
+  "exports": {
+    ".": {
+      "import": {
+        "browser": "./dist/browser/index.mjs",
+        "types": "./dist/browser/index.d.ts"
+      },
+      "require": {
+        "node": "./dist/node/index.js",
+        "types": "./dist/node/index.d.ts"
+      }
+    }
+  },
   "author": "The Extism Authors <oss@extism.org>",
   "license": "BSD-3-Clause",
   "devDependencies": {
