--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@extism/runtime",
-  "version": "0.3.0",
+  "name": "@extism/extism",
+  "version": "1.0.0-rc1",
   "description": "Extism runtime for JavaScript",
   "scripts": {
     "build": "node build.js && tsc --emitDeclarationOnly --project ./tsconfig.node.json --declaration --outDir dist && tsc --emitDeclarationOnly --project ./tsconfig.browser.json --declaration --outDir dist",
@@ -18,7 +18,7 @@
   ],
   "module": "dist/browser/index.mjs",
   "main": "dist/node/index.js",
-  "typings": "dist/src/index.d.ts",
+  "typings": "dist/node/index.d.ts",
   "browser": "./dist/browser/index.mjs",
   "exports": {
     ".": {
