Apply suggestions from code review
Co-authored-by: Chris Dickinson <chris@neversaw.us>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Publish package to NPM
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
       uses: denoland/setup-deno@v1.1.2
     
     - name: NPM install with caching
-      run: npm install
+      run: npm ci
 
     - name: Build
       run: npm run build
@@ -37,8 +37,8 @@ jobs:
 
     - name: Update package version
       run: |
-        TAG=$(git describe --tags --abbrev=0)
-        echo "Latest Git tag: $TAG"
+        tag="${{ github.ref }}"
+        tag="${tag/refs\/tags\/v/}"
         npm version $TAG --no-git-tag-version --no-commit-hooks
 
     - name: NPM Publish
