--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es2022", 
-    "module": "commonjs",  
+    "target": "es2022",
+    "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true,
     "declaration": true,
-    "strict": true,                   
+    "strict": true,
     "skipLibCheck": true,
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": ["./types", "node_modules/@types"]
   },
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*mod.ts"]
+  "exclude": ["node_modules", "dist"],
+  "files": ["./src/mod.ts"]
 }
