fix: remove paths with ":"; windows does not support them

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.8.1
-    
-    - name: Setup Deno
-      uses: denoland/setup-deno@v1.1.2
-    
+    - uses: actions/setup-node@v3.8.1
+
+    - uses: denoland/setup-deno@v1.1.2
+
+    - uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
+
     - name: NPM install
       run: npm ci
 
     - name: Build
       run: npm run build
 
-    - name: Node Test
+    - name: Test
       run: npm run test
-      
-    - name: Deno Test
-      run: deno test -A ./tests/mod.test.ts
