feat: rework api to add background thread support
Let's just get this out of the way really quickly: this commit is too big. 😅

TL;DR, in this commit, we:

- Rewrite the codebase as "mutually intelligible" TypeScript – that is, TS that can be run directly by Deno and compiled to a form that Node, browsers, and Bun all understand.
- Push platform differences to module-level cutpoints (behind `js-sdk:`) using both esbuild and Deno's module replacement support.
- Allow the plugin to be run in a background thread via Workers.
- Allow background plugins to call asynchronous host functions, like `fetch`.
- BREAKING CHANGE: Change the API of plugin output. `plugin.call()`, `currentPlugin.read`, and `currentPlugin.getVariable` return instances of `PluginOutput`, which is patterned after the fetch `Response` object.
- BREAKING CHANGE: Only allow `extism_http_*` functions in background plugins.
- Allow plugins to receive multiple Wasm modules.
- Remove the embedded extism kernel/runtime: `SharedArrayBuffer` requirements precluded re-using the extism kernel.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.8.1
-    
-    - name: Setup Deno
-      uses: denoland/setup-deno@v1.1.2
-    
-    - name: NPM install
-      run: npm ci
+    - uses: extractions/setup-just@v1
 
-    - name: Build
-      run: npm run build
+    - uses: actions/setup-node@v3.8.1
+      with:
+        node-version: lts/*
+        check-latest: true
 
-    - name: Node Test
+    - uses: denoland/setup-deno@v1.1.2
+
+    - uses: oven-sh/setup-bun@v1
+      if: ${{ matrix.os != 'windows-latest' }}
+      with:
+        bun-version: latest
+
+    - name: Test
       run: npm run test
-      
-    - name: Deno Test
-      run: deno test -A ./tests/mod.test.ts
