--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -5,7 +5,7 @@ env:
 extends: ['eslint:recommended', 'plugin:@typescript-eslint/recommended']
 parser: '@typescript-eslint/parser'
 root: true
-ignorePatterns: ["oldsrc/", "tests/mod.test.ts", "tests/index.test.ts"]
+ignorePatterns: []
 rules:
   no-constant-condition: 'off'
   no-unused-vars: 'off'
