--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,22 +7,17 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        rust:
-          - stable
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v3.8.1
-    
+
     - name: Setup Deno
       uses: denoland/setup-deno@v1.1.2
-    
+
     - name: NPM install
       run: npm ci
 
@@ -31,7 +26,7 @@ jobs:
 
     - name: Node Test
       run: npm run test
-      
+
     - name: Deno Test
       run: deno test -A ./tests/mod.test.ts
 
@@ -41,7 +36,17 @@ jobs:
         tag="${tag/refs\/tags\/v/}"
         npm version $tag --no-git-tag-version --no-commit-hooks
 
-    - name: NPM Publish
+    - name: npm publish @extism/extism
+      uses: JS-DevTools/npm-publish@v2.2.2
+      with:
+        token: ${{ secrets.NPM_TOKEN }}
+
+    - name: Update package name
+      run: |
+        pkg="$(<package.json jq '.name = "extism"')"
+        echo "$pkg" >package.json
+
+    - name: npm publish extism
       uses: JS-DevTools/npm-publish@v2.2.2
       with:
         token: ${{ secrets.NPM_TOKEN }}
