--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "playwright": "^1.39.0",
     "prettier": "^2.7.1",
     "tape": "^5.7.1",
-    "typedoc": "^0.25.2",
+    "typedoc": "^0.25.3",
+    "typedoc-github-wiki-theme": "^1.1.0",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.2.2"
   }
 }
