--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
       run: npx typedoc .\src\mod.ts
     
     - name: Deploy docs to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        folder: docs
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
