--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,12 @@ jobs:
       uses: JS-DevTools/npm-publish@v2.2.2
       with:
         token: ${{ secrets.NPM_TOKEN }}
+    
+    - name: typedoc
+      run: just docs
+    
+    - name: Deploy docs to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
