ci: add jsr slow types check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
       with:
         bun-version: latest
 
+    - name: jsr slow types check
+      run: npx jsr publish --dry-run
+
     - name: Test
       run: npm run test
 
