--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         bun-version: latest
 
     - name: jsr slow types check
-      run: npx jsr publish --dry-run
+      run: deno publish --dry-run
 
     - name: Test
       run: npm run test
